[tool.poetry]
name = "skysc"
version = "0.1.0"
description = "This program pulls the flight arrival details from SCAA."
authors = ["eoea <eoea754@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.45.0"
bs4 = "^0.0.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
skysc-run = "skysc.main:main"
